Se agrega el footer

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
                   <h1>Titulo del sitio</h1>
               </div>
           </div>
+          <footer>
+              <div>
+                  <div class="row">
+                      <div class="col text-center">Footer</div>
+                  </div>
+              </div>
+          </footer>
       </div>
       
     <!-- Optional JavaScript -->
