Titulo en rosado y contenidos lorem en el master

--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
                   <h1>Titulo del sitio</h1>
               </div>
           </div>
+<section>
+    <div>
+        <div class="row">
+            <div class="col-12 ttmaster">
+                <h3>Titulo en H3 del master 1</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque asperiores non illum dolorum autem maxime quibusdam alias magnam nulla aliquid natus quis et quo nesciunt id quae dolores, odit eius?</p>
+            </div>
+            <div class="col-12 ttmaster">
+<h4>Titulo en H4 del Master</h4>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sequi quae facere vitae tenetur esse. Quidem veniam, voluptatibus illo quia quibusdam similique voluptates. Nesciunt voluptatum nemo aliquam, consequatur cumque laboriosam!</p>
+            </div>
+        </div>
+    </div>
+</section>
+
           <footer>
               <div>
                   <div class="row">
