Se corrigen los conflictos

--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
     </div>
 </section>
 
+          <section>
+              <div>
+                  <div class="row">
+                      <div class="col-12 titulo"><h2>Esta es un titulo 1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint quos sit illum cum qui. Deserunt perferendis a, qui eum voluptatum amet neque atque voluptates doloribus sint repudiandae in dolore debitis!</p>
+                    </div>
+                    <div class="col-12 titulo"><h2>Esta es un titulo 2</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint quos sit illum cum qui. Deserunt perferendis a, qui eum voluptatum amet neque atque voluptates doloribus sint repudiandae in dolore debitis!</p>
+                        </div>
+                  </div>
+              </div>
+          </section>
           <footer>
               <div>
                   <div class="row">
