--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 <h4>Titulo en H4 del Master</h4>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sequi quae facere vitae tenetur esse. Quidem veniam, voluptatibus illo quia quibusdam similique voluptates. Nesciunt voluptatum nemo aliquam, consequatur cumque laboriosam!</p>
             </div>
+            <div class="col-12 ttmaster">
+                <h4>Titulo en H4 del Master Segundo</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sequi quae facere vitae tenetur esse. Quidem veniam, voluptatibus illo quia quibusdam similique voluptates. Nesciunt voluptatum nemo aliquam, consequatur cumque laboriosam!</p>
+                            </div>
         </div>
     </div>
 </section>
